--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Bootstrap 5 Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/35ea9d8a50.js" crossorigin="anonymous"></script>
   <style>
-    a {
-        text-decoration: none;
-        color: white;
+    body {
+      font-family: Sarabun;
     }
-</style>
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="container-fluid p-5 bg-primary text-white text-center">
-  <h1>Yutthasatr Khumkhonsue</h1>
-  <p>68130239</p> 
-  <p><a class="btn btn-danger" href="/movies" style="text-decoration:none;">แสดงรายชื่อภาพยนต์</a></p> 
-</div>
-  
-<div class="container mt-5">
-  <div class="row">
-    
+  <div class="container-fluid p-5 bg-primary text-white text-center">
+    <h1>Yutthasatr Khumkhonsue</h1>
+    <p>68130239</p>
+    <p><a class="btn btn-danger" href="/movies" style="text-decoration:none;"><i class="fa-solid fa-list pe-2"></i>
+        แสดงรายชื่อภาพยนต์</a></p>
   </div>
-</div>
+
+  <div class="container mt-5">
+    <div class="row">
+
+    </div>
+  </div>
 
 </body>
+
 </html>
